# cpp-sdrtrunk-transcriber

./: .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ConfigSingleton.cpp  ConfigSingleton.h  DatabaseManager.cpp  DatabaseManager.h  Doxyfile  FileData.h  README.md  build.sh  curlHelper.cpp  curlHelper.h  debugUtils.cpp  debugUtils.h  fasterWhisper.py  fileProcessor.cpp  fileProcessor.h  howToFormatYourJSON-multikey.json  howToFormatYourJSON.json  install-systemd-service.sh  main.cpp  sample-config.yaml  test.cpp  transcriptionProcessor.cpp  transcriptionProcessor.h  vcpkg.json
.claude/agents/: cli-developer.md  cpp-pro.md  documentation-engineer.md  git-workflow-manager.md  python-pro.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-matrix.yml  cmake-ubuntu.yml  cmake-windows.yml  codeql-analysis.yml  release.yml  snyk-security.yml  ubuntu-codeql.yml
build-bundled/: CMakeCache.txt
build-testing/: Dockerfile  build.sh  clean.sh  docker-compose.yml
cmake/modules/: CompilerFlags.cmake  Dependencies.cmake  FindYamlCpp.cmake  Packaging.cmake
docs/: API.md  BUILD.md  CONFIGURATION.md
include/: ConfigSingleton.h  DatabaseManager.h  DomainTypes.h  FileData.h  MP3Duration.h  Result.h  ThreadPool.h  commandLineParser.h  curlHelper.h  fasterWhisper.h  fileProcessor.h  globalFlags.h  inotifyWatcher.h  jsonParser.h  security.h  transcriptionProcessor.h  whisperCPP.h  yamlParser.h
scripts/: ai_summarize_date_tgid.py  fasterWhisper.py  find_bad_transcriptions.sh  find_mp3_without_transcription.sh  ollama_summarize_date_tgid.py  ooba_summarize_date_tgid.py  rsync_local_to_server.sh
src/: ConfigSingleton.cpp  DatabaseManager.cpp  MP3Duration.cpp  commandLineParser.cpp  curlHelper.cpp  debugUtils.cpp  fasterWhisper.cpp  fileProcessor.cpp  inotifyWatcher.cpp  jsonParser.cpp  main.cpp  security.cpp  transcriptionProcessor.cpp  whisperCPP.cpp  yamlParser.cpp
test/: CMakeLists.txt  EdgeCaseTests.cpp  IntegrationTests.cpp  IntegrationTests_broken.cpp  SimplePerformanceTests.cpp  TestFixtures.h  TestMocks.h  security_test.cpp  test.cpp
